create table comment_attachments (comment_id integer not null, attachment_url varchar(255));
create table comment_reactions (comment_id integer not null, id serial not null, user_id integer not null, type varchar(255) not null check (type in ('LIKE','DISLIKE')), primary key (id), unique (comment_id, user_id));
create table comments (author_id integer not null, id serial not null, parent_comment_id integer, task_id integer not null, edited_at timestamp(6) with time zone, timestamp timestamp(6) with time zone not null, version bigint, content TEXT not null, primary key (id));
create table notifications (id serial not null, is_read boolean not null, user_id integer not null, timestamp timestamp(6) with time zone not null, link varchar(255), message TEXT not null, type varchar(255) not null check (type in ('PROJECT_INVITATION','PROJECT_UPDATED','MEMBER_REMOVED','TASK_ASSIGNED','TASK_UPDATED','TASK_COMMENT','TASK_DELETED','COMMENT_REPLY','COMMENT_REACTION')), primary key (id));
create table project_attachments (project_id integer not null, attachment_url varchar(255));
create table project_dependencies (dependency_id integer not null, project_id integer not null);
create table project_members (project_id integer not null, user_id integer not null);
create table projects (id serial not null, next_task_number integer not null, owner_id integer not null, version bigint, description TEXT, project_key varchar(255) not null unique, summary varchar(255) not null, primary key (id));
create table refresh_tokens (user_id integer not null, created_at timestamp(6) with time zone not null, expiry_date timestamp(6) with time zone not null, id bigserial not null, token varchar(255) not null unique, primary key (id));
create table task_activities (author_id integer not null, id serial not null, task_id integer not null, timestamp timestamp(6) with time zone not null, field_name varchar(255), new_value TEXT, old_value TEXT, type varchar(255) not null check (type in ('CREATED','STATUS_CHANGED','PRIORITY_CHANGED','ASSIGNEE_CHANGED','PROGRESS_CHANGED','DATES_CHANGED','SUMMARY_CHANGED','DESCRIPTION_CHANGED','LABELS_CHANGED','DEPENDENCIES_CHANGED','ATTACHMENTS_CHANGED','COMMENT_ADDED','COMMENT_DELETED')), primary key (id));
create table task_attachments (task_id integer not null, attachment_url varchar(255));
create table task_dependencies (dependency_id integer not null, task_id integer not null);
create table tasks (assignee_id integer, due_date date, id serial not null, progress integer, project_id integer not null, start_date date, task_number integer not null, created timestamp(6) with time zone not null, updated timestamp(6) with time zone not null, version bigint, description TEXT, labels varchar(255), priority varchar(255) check (priority in ('LOWEST','LOW','MEDIUM','HIGH','HIGHEST')), status varchar(255) not null check (status in ('BACKLOG','GATHERING_INTEREST','TODO','WITHDRAWN','IN_PROGRESS','TO_REVIEW','TO_TEST','IN_TEST','READY_TO_MERGE','READY_TO_DEPLOY','RELEASED','DONE')), summary varchar(255) not null, primary key (id), constraint uk_task_project_number unique (project_id, task_number));
create table users (email_notifications_enabled boolean not null default true not null, email_on_comment_reply boolean not null default true not null, email_on_project_invitation boolean not null default true not null, email_on_task_assigned boolean not null default true not null, id serial not null, email varchar(255) not null, first_name varchar(255) not null, last_name varchar(255) not null, password varchar(255) not null, profile_picture varchar(255), primary key (id), constraint user_email_unique unique (email));
create index idx_comment_task on comments (task_id);
create index idx_comment_author on comments (author_id);
create index idx_comment_parent on comments (parent_comment_id);
create index idx_notification_user_read on notifications (user_id, is_read);
create index idx_notification_user_timestamp on notifications (user_id, timestamp);
create index idx_project_owner on projects (owner_id);
create index idx_refresh_token on refresh_tokens (token);
create index idx_refresh_user on refresh_tokens (user_id);
create index idx_task_activity_task on task_activities (task_id);
create index idx_task_activity_timestamp on task_activities (task_id, timestamp);
create index idx_task_project on tasks (project_id);
create index idx_task_assignee on tasks (assignee_id);
create index idx_task_status on tasks (status);
create index idx_task_due_date on tasks (due_date);
create index idx_task_priority on tasks (priority);
alter table if exists comment_attachments add constraint FKhgcebt3p6nx73il260nkt5bwg foreign key (comment_id) references comments;
alter table if exists comment_reactions add constraint FKfb7jmhiih0qcj4sykg2pcip35 foreign key (comment_id) references comments;
alter table if exists comment_reactions add constraint FK2t2mv78fm49m4lni9gih7kkaa foreign key (user_id) references users;
alter table if exists comments add constraint FKn2na60ukhs76ibtpt9burkm27 foreign key (author_id) references users;
alter table if exists comments add constraint FK7h839m3lkvhbyv3bcdv7sm4fj foreign key (parent_comment_id) references comments;
alter table if exists comments add constraint FKi7pp0331nbiwd2844kg78kfwb foreign key (task_id) references tasks;
alter table if exists notifications add constraint FK9y21adhxn0ayjhfocscqox7bh foreign key (user_id) references users;
alter table if exists project_attachments add constraint FKjweorqwskf7ae9w25eus73hxh foreign key (project_id) references projects;
alter table if exists project_dependencies add constraint FKrbiqdisbn226jl4265c46sbch FOREIGN KEY (dependency_id) REFERENCES projects(id) ON DELETE CASCADE;
alter table if exists project_dependencies add constraint FKdipb28i2iim3ksfmeco45r7xb FOREIGN KEY (project_id) REFERENCES projects(id) ON DELETE CASCADE;
alter table if exists project_members add constraint FKgul2el0qjk5lsvig3wgajwm77 foreign key (user_id) references users;
alter table if exists project_members add constraint FKdki1sp2homqsdcvqm9yrix31g foreign key (project_id) references projects;
alter table if exists projects add constraint FKmueqy6cpcwpfl8gnnag4idjt9 foreign key (owner_id) references users;
alter table if exists task_activities add constraint FKs065w2bxclcedt8hinvg9jcyk foreign key (author_id) references users;
alter table if exists task_activities add constraint FKkgc6x6jdghxwivve0euo67sev foreign key (task_id) references tasks;
alter table if exists task_attachments add constraint FK4eyiisq4wyx2mfj3p9h8ppufo foreign key (task_id) references tasks;
alter table if exists task_dependencies add constraint FKnwfxktx9emcwsylqofad5cxbx FOREIGN KEY (dependency_id) REFERENCES tasks(id) ON DELETE CASCADE;
alter table if exists task_dependencies add constraint FKerlktvi2bud6uauih348u0loj FOREIGN KEY (task_id) REFERENCES tasks(id) ON DELETE CASCADE;
alter table if exists tasks add constraint FKekr1dgiqktpyoip3qmp6lxsit foreign key (assignee_id) references users;
alter table if exists tasks add constraint FKsfhn82y57i3k9uxww1s007acc foreign key (project_id) references projects;
